--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
    <div id="page">
     <section id="title-page">
-        <p>Sua próxima viagem:</p>
+        <p class="headline">Sua próxima viagem:</p>
         <h1>Conheça Busan</h1>
     </section>
     <section id="descriprion-image">
@@ -21,10 +21,11 @@
             <figcaption>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</figcaption>
         </figure>
     </section>
+    <div id="divisor"></div>
     <main>
         <section id="title-list">
             <div>
-                <p>Para os amantes de história</p>
+                <p class="headline">Para os amantes de história</p>
                 <h2>Descubra 3 destinos imperdíveis em Busan</h2>
             </div>
             <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
@@ -35,20 +36,22 @@
                 <img src="./assets/Templo Haedong Yonggungsa.jpg" alt="haedong">
                 <div class="conteudo-cards">
                     <h3>1. Templo Haedong Yonggungsa </h3>
-                    <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. <br><br>
-
-                        Bom para: <br>
-                        ・História</p>
+                    <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. <br> <br>
+                        <strong>Bom para:</strong>
+                        <ul>
+                            <li class="blue-text">História</li>
+                        </ul>
                 </div>
             </div>
             <div class="card">
                 <img src="./assets/Templo Beomeo-sa.jpg" alt="Beomeo">
                 <div class="conteudo-cards">
                     <h3>2. Templo Beomeo-sa</h3>
-                    <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. <br><br>
-
-                        Bom para: <br>
-                        ・História</p>
+                    <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. <br> <br>
+                        <strong>Bom para:</strong>
+                        <ul>
+                            <li class="blue-text">História</li>
+                        </ul>
                 </div>
             </div>
             <div class="card">
@@ -56,17 +59,19 @@
                 <div class="conteudo-cards">
                     <h3>3. Parque Yongdusan</h3>
                     <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. <br> <br>
-
-                        Bom para: <br>
-                        ・Casais <br>
-                        ・Famílias <br>
-                        ・Orçamento</p> 
+                        <strong>Bom para:</strong>
+                        <ul>
+                            <li class="burble-text">Cassais</li>
+                            <li class="red-text">Familias</li>
+                            <li class="orange-text">Orçamento</li>
+                        </ul>
                 </div>
             </div>
         </section>
     </main>
-    <div id="divisor"></div>
-    <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
+    <div id="divisor">
+    </div>
+    <p id="description">As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
    </div>
     <footer>
         Feito com <img src="./assets/ph_heart-fill.svg" alt="heart"> pela Rocketseat
